--- a/style.css
+++ b/style.css
@@ -92,3 +92,20 @@ ul li::before{
 .checked::before{
     background-image: url(success.png);
 }
+
+span {
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+span:hover{ 
+background-color: #edeef0;
+}
